# LearnFFmpeg

./: CMakeLists.txt
linuxc/: linux_system.md
script/: aaa  and.sh  bbb  case.sh  cd.sh  data.json  extra_json.sh  first.sh  if.sh  jawk  json.sh  or.sh  serial.sh  test.txt  test_command.sh  text.txt  try_var.sh  until.sh  while.sh
src/: cp_file.c  extra_video_to_image.c  remuxing.c
